--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 *{
-    font-family: sans-serif;
+    font-family: Roboto, sans-serif;
 }
 
 body {
@@ -70,6 +70,7 @@ a {
     width: fit-content;
     border-radius: 8px;
     color: #F9FAF8;
+    border-style: none;
 }
 
 .img-1 {
@@ -157,4 +158,53 @@ a {
     color: #1F2937;
     font-weight: 800;
     text-align: right;
+}
+
+.four {
+    display: flex;
+    background-color: #F9FAF8;
+    padding: 0 20px;
+    height: 20vh;
+    min-height: 250px;
+    justify-content: center;
+    align-items: center;
+}
+
+.four-container {
+    display: flex;
+    background-color: #3882F6;
+    width: 825px;
+    height: 100px;
+    border-radius: 10px;
+    align-items: center;
+    justify-content: center;
+    gap: 150px;
+}
+
+.four-text {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.four-head {
+    font-size: 20px;
+    font-weight: 800;
+    color: #F9FAF8;
+}
+
+.four-subtext {
+    font-size: 12px;
+    font-weight: 500;
+    color: #F9FAF8;
+}
+
+.four-container button {
+    background-color: #3882F6;
+    padding: 5px 25px;
+    width: fit-content;
+    border-radius: 8px;
+    color: #F9FAF8;
+    border-color: #F9FAF8;
+    border-style: solid;
 }
