--- a/styles.css
+++ b/styles.css
@@ -208,3 +208,19 @@ a {
     border-color: #F9FAF8;
     border-style: solid;
 }
+
+.footer {
+    background-color: #1F2937;
+    display: flex;
+    height: 50px;
+    width: auto;
+    align-items: center;
+    justify-content: center;
+    padding: 0 20px;
+}
+
+.footer-text {
+    font-size: 15px;
+    font-weight: 500;
+    color: #F9FAF8;
+}
